design/common.blocks/popup/_theme/popup_theme_alfa.styl
.popup_theme_alfa
{
    display:    none;
    visibility: hidden;

    margin: -9999px 0 0 -9999px;

    border-radius: $popup_radius;

    box-sizing: border-box;

    z-index : 9999;

    &.popup_js_inited
    {
        display: block;
    }

    &.popup_view_column
    {
        background-color: rgba(0, 0, 0, 0.6);

        &.popup_visible
        {
            margin: 0 0 0 -35px;
            display: block;
            opacity: 1;
        }

        bottom: 0;
        top:    0 !important;

        min-width: 300px;

        position: fixed;
        padding:  20px 35px;

        border-radius: 0;

        opacity: 0;

        transition: opacity 400ms ease;
    }

    &.popup_view_dropdown
    {
        border-radius: 0 0 $popup_radius $popup_radius;

        margin-top: -5px !important;

        overflow-y: auto;

        max-height: 400px;
    }

    &.popup_visible
    {
        font-family: $font_family;
        font-weight: $font_weight;
        font-size:   $font_size;

        visibility: visible;

        margin: 0;

        &.popup_view_hint
        {
            padding: 15px;

            max-width:  220px;
            min-height: 44px;
        }

        &.popup_invalid
        {
            background-color: #fc5c5e;

            color: #fff;

            box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.4);
        }

        &.popup_direction_right-top
        {
            margin: -4px 0 0 10px;
        }

        &.popup_direction_left-top
        {
            margin: -4px 0 0 -10px;
        }

        &.popup_direction_right-top::before,
        &.popup_direction_left-top::after
        {
            display: inline-block;

            vertical-align: middle;

            content: '';

            width:  0;
            height: 0;
        }

        &.popup_direction_right-top::before
        {
            margin: -2px 15px 0px -22px;

            border-top:         7px solid transparent;
            border-right:       7px solid #000;
            border-right-color: rgba(0, 0, 0, 0.6);
            border-bottom:      7px solid transparent;
        }

        &.popup_direction_left-top::after
        {
            margin: -2px -22px 0 15px;

            border-top:        7px solid transparent;
            border-left:       7px solid #000;
            border-left-color: rgba(0, 0, 0, 0.6);
            border-bottom:     7px solid transparent;
        }

        &.popup_invalid.popup_direction_right-top::before
        {
            border-right-color: #fc5c5e;
        }

        &.popup_invalid.popup_direction_left-top::after
        {
            border-left-color: #fc5c5e;
        }
    }
}

